--- a/Dataset analytics.ipynb
+++ b/Dataset analytics.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "6e1ca380",
    "metadata": {},
    "outputs": [],
@@ -4004,7 +4004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "1e152f0a",
    "metadata": {},
    "outputs": [],
@@ -6925,11 +6925,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bdbc0ed",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team A</th>\n",
+       "      <th>Team B</th>\n",
+       "      <th>Team A Winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Team A, Team B, Team A Winner]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "output_file = pd.DataFrame({'Team A':[],\n",
+    "                            'Team B': [],\n",
+    "                            'Team A Winner':[]})\n",
+    "output_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "122e3aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team A</th>\n",
+       "      <th>Team B</th>\n",
+       "      <th>Team A Winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Team A, Team B, Team A Winner]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88056fb6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in men_teams_2024:\n",
+    "    for j in men_teams_2024:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9413bd19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TeamID</th>\n",
+       "      <th>TeamName</th>\n",
+       "      <th>FirstD1Season</th>\n",
+       "      <th>LastD1Season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>1447</td>\n",
+       "      <td>Wagner</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>2024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     TeamID TeamName  FirstD1Season  LastD1Season\n",
+       "346    1447   Wagner           1985          2024"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "men_teams[men_teams.TeamName == 'Wagner']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "abecb6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Connecticut     67\n",
+       "Stetson         66\n",
+       "FL Atlantic     65\n",
+       "Northwestern    64\n",
+       "San Diego St    63\n",
+       "                ..\n",
+       "Akron            5\n",
+       "Texas            4\n",
+       "Virginia         3\n",
+       "Colorado St      2\n",
+       "Tennessee        1\n",
+       "Name: Team A, Length: 66, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from summarytools import dfSummary\n",
+    "output_file['Team A'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "95f6527a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team_A</th>\n",
+       "      <th>Team_B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>Stetson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>FL Atlantic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>Northwestern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>San Diego St</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>UAB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4551</th>\n",
+       "      <td>St Peter's</td>\n",
+       "      <td>Akron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4552</th>\n",
+       "      <td>St Peter's</td>\n",
+       "      <td>Texas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4553</th>\n",
+       "      <td>St Peter's</td>\n",
+       "      <td>Virginia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4554</th>\n",
+       "      <td>St Peter's</td>\n",
+       "      <td>Colorado St</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4555</th>\n",
+       "      <td>St Peter's</td>\n",
+       "      <td>Tennessee</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4556 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Team_A        Team_B\n",
+       "0     Connecticut       Stetson\n",
+       "1     Connecticut   FL Atlantic\n",
+       "2     Connecticut  Northwestern\n",
+       "3     Connecticut  San Diego St\n",
+       "4     Connecticut           UAB\n",
+       "...           ...           ...\n",
+       "4551   St Peter's         Akron\n",
+       "4552   St Peter's         Texas\n",
+       "4553   St Peter's      Virginia\n",
+       "4554   St Peter's   Colorado St\n",
+       "4555   St Peter's     Tennessee\n",
+       "\n",
+       "[4556 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from itertools import permutations\n",
+    "\n",
+    "# List of values\n",
+    "a = ['A', 'B', 'C']\n",
+    "\n",
+    "# Generate pairs of values with all possible combinations\n",
+    "pairs = [(x, y) for x, y in permutations(men_teams_2024, 2)]\n",
+    "\n",
+    "# Create DataFrame\n",
+    "output_file = pd.DataFrame(pairs, columns=['Team_A', 'Team_B'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9247a7fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(men_teams_2024)"
+   ]
   }
  ],
  "metadata": {
